Use Java 11 features.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ball-game/trunk@8365 b3e4a033-f9ea-474d-ac63-5dcbede9114a